--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="lib/rssFeed.js"></script>
   <script src="lib/video_playback.js"></script>
+  <script src="lib/content.js"></script>
   <script>
     $(document).ready(function () {  
         $('#feed').Feed();
@@ -13,17 +14,7 @@
   </script>
   <script>
     $(document).ready(function () {
-      $('#video').Video();
-      $('#video').MultipleVideo();
-    });
-  </script>
-  <script>
-    $(document).ready(function () {
-      var video = document.getElementsByTagName('video')[0];
-
-      video.onended = function(e) {
-        alert('video ended');
-}
+      $('#video').Content();
     });
   </script>
 </head>
@@ -31,28 +22,30 @@
   <div class="wrapper">
     <div class="sidebar">
       <h2>now serving:</h2>
-      <ul>
-        <li>014</li>
-        <li>desk <b>2</b></li>
+      <ul id="row1">
+        <li>003</li>
+        <li>desk <strong>5</strong></li>
       </ul>
-      <ul>
-        <li>022</li>
-        <li>desk <b>5</b></li>
+      <ul id="row2">
+        <li>002</li>
+        <li>desk <strong>3</strong></li>
       </ul>
-      <ul>
-        <li>034</li>
-        <li>desk <b>1</b></li>
+      <ul id="row3">
+        <li>001</li>
+        <li>desk <strong>1</strong></li>
       </ul>
     </div>
     <div class="content">
       <h1>Now serving:</h1>
-      <p id="current_number"><b>018</b></p>
+      <p id="current_number">004</p>
       <p style="font-size: 2.5vw;">please come to desk:</p>
-      <p style="font-size: 6.1vw;"><b>4</b></p>
+      <p id="desk_number">1</p>
       <div id="video">
-        <video autoplay width="300px" height="300px">
+        <video id="one" autoplay width="300px" height="300px">
+          <source src="media/sample3.mp4" type="video/webm" />
+        </video>
+        <video id="two" autoplay loop width="300px" height="300px">
           <source src="media/sample.mp4" />
-          <source src="media/sample3.mp4" />
         </video>
       </div>
     </div>
