Add simple number calling

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       <p style="font-size: 2.5vw;">please come to desk:</p>
       <p id="desk_number">1</p>
       <div id="video">
-        <video id="one" autoplay width="300px" height="300px">
-          <source src="media/sample3.mp4" type="video/webm" />
+        <video id="one" autoplay loop>
+          <source src="media/sample3_converted.mp4" type="video/mp4" />
         </video>
-        <video id="two" autoplay loop width="300px" height="300px">
-          <source src="media/sample.mp4" />
+        <video id="two" autoplay loop>
+          <source src="media/sample4.mp4" />
         </video>
       </div>
     </div>
